add images to gallery

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
   <h1>Hi, Konstantin!</h1>
   <p>This is my GitHUB homework.</p>
+  <a href="/pages/gallery.html">These images are awesom!</a>
 </body>
 </html>
