--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -6,11 +6,11 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>These are beatiful images of the oucen.</h1>
+  <h1>These are beatiful images of the oucean.</h1>
   <ol>
-    <li><img src="../gallery/1.jpeg" alt="the oucen one"></li>
-    <li><img src="../gallery/2.jpeg" alt="the oucen two"></li>
-    <li><img src="../gallery/3.jpeg" alt="the oucen three"></li>
+    <li><img src="../gallery/1.jpeg" alt="the oucean one"></li>
+    <li><img src="../gallery/2.jpeg" alt="the oucean two"></li>
+    <li><img src="../gallery/3.jpeg" alt="the oucean three"></li>
   </ol>
 </body>
 </html>
