add command to index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
   <h1>Hi, Konstantin!</h1>
   <p>This is my GitHUB homework.</p>
   <a href="/pages/gallery.html">These images are awesom!</a>
+  <h2>Initialisation repository GitHUB</h2>
+  <ol>
+    <li>#git init - inicialisation repositiry</li>
+    <li>#git add . — add all files</li>
+    <li>#git commit -m “first commit”</li>
+    <li>#git remote add origin https://github.com/janoc0504/new_one.git</li>
+  </ol>
+  <h3>switch on project to git</h3>
+  <p>#git push -u origin main — push our project</p>
+  <h2>Push project</h2>
+  <ol>
+    <li>#git add .</li>
+    <li>#git commit -m “next changes”</li>
+    <li>#git push</li>
+  </ol>
 </body>
+
 </html>
