--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -6,6 +6,7 @@
   <title>Document</title>
 </head>
 <body>
+  <a href="../index.html">Back to main page</a>
   <h1>These are beatiful images of the oucean.</h1>
   <ol>
     <li><img src="../gallery/1.jpeg" alt="the oucean one"></li>
