--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <li>#git commit -m “next changes”</li>
     <li>#git push</li>
   </ol>
+  <p>I added this paragraf because I need make another commit to git.</p>
 </body>
 
 </html>
