add paragraff to gallery

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
   <a href="../index.html">Back to main page</a>
   <h1>These are beatiful images of the oucean.</h1>
@@ -13,5 +15,7 @@
     <li><img src="../gallery/2.jpeg" alt="the oucean two"></li>
     <li><img src="../gallery/3.jpeg" alt="the oucean three"></li>
   </ol>
+  <p>Only for commit</p>
 </body>
+
 </html>
